@@ -22,7 +22,15 @@ Net::SSLeay::X509_NAME class in L<SPVM> represents L<X509_NAME|https://docs.open
 
 C<method oneline : string ();>
 
-Calls native L<X509_NAME_oneline|https://docs.openssl.org/1.1.1/man3/X509_NAME_print_ex/#description> functions given $buf with NULL, and returns its return value.
+Calls native L<X509_NAME_oneline|https://docs.openssl.org/1.1.1/man3/X509_NAME_print_ex> functions given $buf with NULL, and returns its return value.
+
+=head2 get_text_by_NID
+
+C<method get_text_by_NID : int ($nid : int, $buf : mutable string, $len : int = -1);>
+
+Calls native L<X509_get_text_by_NID|https://docs.openssl.org/1.1.1/man3/X509_NAME_get_index_by_NID> functions given $nid, $buf, $len, and returns its return value.
+
+If $buf is defined and $len is a negative value, $len is set to the length of $buf.
 
 =head2 DESTROY
 
