@@ -6,5 +6,7 @@ class Net::SSLeay::X509_NAME {
   # Instance Methods
   native method oneline : string ();
   
+  native method get_text_by_NID : int ($nid : int, $buf : mutable string, $len : int = -1);
+  
   native method DESTROY : void ();
 }
